add shared files from https://github.com/slembcke/flatpak-marathon

--- a/flatpak.yml
+++ b/flatpak.yml
@@ -11,6 +11,12 @@ finish-args:
   - --socket=session-bus
   
 modules:
+  - shared/boost.yml
+  - shared/glu.yml
+  - shared/mad.yml
+  - shared/zzip.yml
+  - shared/miniupnpc.yml
+  - shared/alephone.yml
   - name: alephone-launcher-gui
     buildsystem: simple
     build-commands:
