add sdl2_net back; build for x86_64

--- a/flatpak.yml
+++ b/flatpak.yml
@@ -16,6 +16,7 @@ modules:
   - shared/mad.yml
   - shared/zzip.yml
   - shared/miniupnpc.yml
+  - shared/SDL2_net.json
   - shared/alephone.yml
   - name: alephone-launcher-gui
     buildsystem: simple
