--- a/.build.yml
+++ b/.build.yml
@@ -30,5 +30,9 @@ tasks:
       cd alephone-launcher
       flatpak-builder --arch=x86_64 --gpg-sign=FBEF43DC8C6BE9A7 --repo=/opt/pakrepo --force-clean .builddir flatpak.yml
   - deploy: |
-    rsync -azu --delete /opt/pakrepo/ server:/var/www/htdocs/elagost.com/flatpak/repo_launcher/
+      rsync -azu --delete /opt/pakrepo/ server:/var/www/htdocs/elagost.com/flatpak/repo_launcher/
+triggers:
+  - action: email
+    condition: always
+    to: adamj@mailbox.org
 
