--- a/.build.yml
+++ b/.build.yml
@@ -26,7 +26,7 @@ tasks:
       sudo mkdir -p /opt/pakrepo
       sudo chown build /opt/pakrepo
       sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-      sudo flatpak install --noninteractive --arch=x86_64 flathub org.gnome.Sdk//43 org.gnome.Platofrm//43 org.freedesktop.Platform//22.08 org.freedesktop.Sdk//22.08 -y
+      sudo flatpak install --noninteractive --arch=x86_64 flathub org.gnome.Sdk//43 org.gnome.Platform//43 org.freedesktop.Platform//22.08 org.freedesktop.Sdk//22.08 -y
   - build-flatpak: |
       cd alephone-launcher
       flatpak-builder --arch=x86_64 --gpg-sign=FBEF43DC8C6BE9A7 --repo=/opt/pakrepo --force-clean .builddir flatpak.yml
